# agentic_AI

./: .gitignore  Ai_council.py  agent.py  council.py  events.py  history.py  models.py  openRouter.py  pyproject.toml  snake_game.py  tools.py
ai_council.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
