[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-council"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["python-dotenv"]

[project.scripts]
council = "council:main"
agent   = "agent:main"

[tool.setuptools]
py-modules = ["council", "agent", "tools", "events", "history", "models"]